k8s/basic/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: u1
spec:
  containers:
  - name: tester
    image: busybox
    command: ["/bin/sh", "-c", "while true; do sleep 10000; done"]
    volumeMounts:
    - mountPath: /mnt/data
      name: nfs-volume
  volumes:
  - name: nfs-volume
    persistentVolumeClaim:
      claimName: pvc-local-nfs
