k8s/basic/service-demo-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-redis-service
  namespace: u1
spec:
  ports:
    - port: 6379
  selector:
    open-ending.com/name: demo-redis
