k8s/basic/service-mss-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: mss-app-service
  namespace: u1
spec:
  ports:
    - port: 8080
  selector:
    open-ending.com/name: mss-app
