k8s/basic/ingress-mss-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mss-app-ingress
  namespace: u1
spec:
  ingressClassName: nginx
  rules:
    - host: mss-app.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mss-app-service
                port:
                  number: 8080
